--- a/workspace/assets/style/pages/_topBanner.scss
+++ b/workspace/assets/style/pages/_topBanner.scss
@@ -25,26 +25,24 @@
 		}
 	}
 
-	button {
+	.sub_header {
 		position: absolute;
 		top: 0;
-		padding: 0.313rem; //5px
-		font-size: 3.75rem; //60px
+		left: 0;
 		z-index: 5;
+		width: 100%;
+		padding: 1rem;
+		background: linear-gradient(to bottom, rgba(#000, .05), rgba(#000, 0));
+	}
+	button {
+		font-size: 3.75rem; //60px
 
 		i {
 			text-shadow: 1px 2px 2px #000;
 			color: #fff;
 		}
-		&.btn_back {
-			left: 0;
-		}
-		&.btn_home {
-			left: 12%;
-
-			@media screen and (min-width: 640px) {
-				left: 9%;
-			}
+		&.btn_search {
+			float: right;
 		}
 	}
 }
