--- a/workspace/include/topBanner.html
+++ b/workspace/include/topBanner.html
@@ -5,10 +5,15 @@
 		<p class="title">@@title</p>
 	</div>
 
-	<button type="button" class="btn_back">
-		<i class="ph-caret-left-thin"></i>
-	</button>
-	<button type="button" class="btn_home">
-		<i class="ph-house-thin"></i>
-	</button>
+	<div class="sub_header">
+		<button type="button" class="btn_back">
+			<i class="ph-caret-left-thin"></i>
+		</button>
+		<button type="button" class="btn_home">
+			<i class="ph-house-thin"></i>
+		</button>
+		<button type="button" class="btn_search">
+			<i class="ph-magnifying-glass-thin"></i>
+		</button>
+	</div>
 </div>
