--- a/workspace/assets/style/pages/_topBanner.scss
+++ b/workspace/assets/style/pages/_topBanner.scss
@@ -1,6 +1,11 @@
 .top_area {
 	position: relative;
-
+	height: 29.375rem; //470px
+	overflow: hidden;
+	
+	& > img {
+		object-fit: cover;
+	}
 	.bn_text {
 		position: absolute;
 		top: 0;
@@ -8,7 +13,6 @@
 		text-align: center;
 		display: flex;
 		flex-direction: column;
-		align-items: center;
 		justify-content: center;
 		width: 100%;
 		height: 100%;
@@ -24,7 +28,7 @@
 			font-weight: bold;
 		}
 	}
-
+	
 	.sub_header {
 		position: absolute;
 		top: 0;
