--- a/workspace/assets/style/pages/_popup.scss
+++ b/workspace/assets/style/pages/_popup.scss
@@ -39,8 +39,8 @@
   }
   .popup_header {
     position: relative;
-    padding: 1.563rem; //25px
-    font-size: 20px;
+    padding: 16px;
+    font-size: 16px;
     border-bottom: 1px solid #DADADA;
 
     .title {
@@ -49,27 +49,27 @@
     }
     .popup_close {
       @include position-translate(absolute, $t: 50%, $r: 0, $x: 0, $y: -50%);
-      padding: 1.563rem; //25px
+      padding: 16px;
       font-size: inherit;
     }
   }
   .popup_content {
-    padding: 1.563rem; //25px
+    padding: 16px;
   }
   .share_buttons {
     text-align: center;
-    margin: -1.563rem 0 0 -1.563rem;
+    margin: -16px 0 0 -16px;
 
     button {
-      width: 5rem;
-      margin: 1.563rem 0 0 1.563rem;
+      width: 50px;
+      margin: 16px 0 0 16px;
 
       &:before {
         content: '';
         display: block;
         width: 100%;
         margin-bottom: 10px;
-        padding-top: 100%;
+        padding-top: 50px;
         background-repeat: no-repeat;
         background-position: top center;
         background-size: 100%;
