--- a/workspace/assets/style/settings/_scrollbar.scss
+++ b/workspace/assets/style/settings/_scrollbar.scss
@@ -2,13 +2,13 @@
 	scrollbar
 ---------------------------------------------- */
 ::-webkit-scrollbar {
-	width: 12px;
-	height: 12px;
+	width: 6px;
+	height: 6px;
 }
 ::-webkit-scrollbar-button:start:decrement,
 ::-webkit-scrollbar-button:end:increment {
 	display: block;
-	height: 12px;
+	height: 6px;
 	background: transparent
 }
 ::-webkit-scrollbar-track {
@@ -19,10 +19,10 @@
 	-webkit-box-shadow: inset 0 0 4px rgba(0,0,0,.1)
 }
 ::-webkit-scrollbar-thumb {
-	height: 50px;
-	width: 50px;
+	// height: 50px;
+	// width: 50px;
 	background: #fff;
-	border: 1px solid #CCCCCC;
+	border: 1px solid #ccc;
 	-webkit-border-radius: 10px;
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 4px rgba(0,0,0,.2)
