--- a/workspace/assets/style/pages/_comment.scss
+++ b/workspace/assets/style/pages/_comment.scss
@@ -41,13 +41,12 @@
   }
   .comment_list {
     margin-top: 1.031rem;// 16.5px
-    border-top: 1px solid #DADADA;
 
     .comment_info {
       position: relative;
       vertical-align: text-bottom;
-      margin: 0.375rem 0 0;// 6px
-      padding: 0 0.938rem;//15px
+      padding: 0.375rem 0.938rem;// 6px 15px
+      border-top: 1px solid #DADADA;
     }
     .btn_dropdown {
       @include position(absolute, $t:0, $r:0);
@@ -102,7 +101,7 @@
 
   .btn_more {
     text-align: right;
-    margin-top: 0.938rem;//15px
+    margin: 0.938rem;//15px
 
     button {
       font-size: 1.25rem;// 20px
