--- a/workspace/assets/style/pages/_comment.scss
+++ b/workspace/assets/style/pages/_comment.scss
@@ -1,5 +1,6 @@
 .comments_box {
   line-height: 1.2;
+  margin-top: 3.125rem;// 50px
   padding: 0 0.938rem;//15px
   border-top: 2px solid #FEAD20;
   font-size: 1.563rem;// 25px
