--- a/workspace/assets/style/pages/_comment.scss
+++ b/workspace/assets/style/pages/_comment.scss
@@ -9,6 +9,15 @@
     margin: 10px 0;//10px
     padding: 0 0.938rem;//15px
   }
+  .btn_wrap {
+    .btn_comment {
+      margin-left: 1rem;
+      padding: 0.375rem 1rem;// 3px 8px
+      background: #AFAFAF;
+      color: #fff;
+      font-size: 1.375rem;// 22px
+    }
+  }
   .comment_write {
     padding: 0.625rem 0.938rem;//10px 15px
     border: 1px solid #DADADA;
@@ -84,6 +93,7 @@
       margin: 0.375rem 0.938rem 0.75rem;// 6px 15px 12px
     }
     .sub_comment {
+      margin: 0.938rem 0 0;//15px
       padding: 1.063rem 2.5rem 0.875rem;// 17px 40px 14px
       color: #B8B8B8;
       background: #F8F8F8;
@@ -91,6 +101,16 @@
       .date {
         text-align: right;
         margin-top: 5px;
+      }
+    }
+    .comment_write {
+      height: 0;
+      opacity: 0;
+
+      &.active {
+        height: auto;
+        margin: 0.938rem;//15px
+        opacity: 1;
       }
     }
 
