--- a/workspace/assets/style/pages/_comment.scss
+++ b/workspace/assets/style/pages/_comment.scss
@@ -27,7 +27,7 @@
     }
     textarea {
       width: 100%;
-      height: 12vh;
+      height: 80px;
       margin-top: 2px;
       border: 0;
       font-size: 1.375rem;// 22px
@@ -104,13 +104,23 @@
       }
     }
     .comment_write {
+      position: relative;
       height: 0;
       opacity: 0;
 
+      &:before {
+        content: url('https://api.iconify.design/radix-icons/caret-left.svg?color=%23999&width=20');
+        @include position(absolute, $t: 0, $l: -2rem);
+        transform: rotate(-45deg);
+      }
       &.active {
         height: auto;
-        margin: 0.938rem;//15px
+        margin: 0.938rem 0.938rem 0.938rem 2.4rem; //15px
         opacity: 1;
+        -moz-transition: opacity .3s ease-in-out;
+        -webkit-transition: opacity .3s ease-in-out;
+        -o-transition: opacity .3s ease-in-out;
+        transition: opacity .3s ease-in-out;
       }
     }
 
