--- a/workspace/assets/style/pages/_comment.scss
+++ b/workspace/assets/style/pages/_comment.scss
@@ -61,17 +61,18 @@
     .btn_dropdown {
       @include position(absolute, $t:0, $r:0);
       text-align: right;
+      padding: 0.4rem;
       font-size: 1.375rem;// 22px
     }
     .dropdown_list {
-      @include position(absolute, $t:100%, $r:0);
+      @include position(absolute, $t:2.5rem, $r:0);
       height: 0;
       opacity: 0;
 
       button {
         padding: 0.313rem 0.938rem;// 5px 15px
         color: #fff;
-        font-size: 1.375rem;// 22px
+        font-size: 1.5rem;// 22px
       }
       .btn_modify {
         background: #FEAD20;
@@ -93,6 +94,7 @@
       margin: 0.375rem 0.938rem 0.75rem;// 6px 15px 12px
     }
     .sub_comment {
+      position: relative;
       margin: 0.938rem 0 0;//15px
       padding: 1.063rem 2.5rem 0.875rem;// 17px 40px 14px
       color: #B8B8B8;
