--- a/workspace/assets/style/settings/_index.scss
+++ b/workspace/assets/style/settings/_index.scss
@@ -1,1 +1,1 @@
-@import 'common', 'fonts', 'box', 'blind', 'scrollbar', 'animation';
+@import 'common', 'fonts', 'box', 'blind', 'scrollbar', 'animation', 'checkbox';
