--- a/workspace/assets/style/settings/_common.scss
+++ b/workspace/assets/style/settings/_common.scss
@@ -15,7 +15,7 @@
 html,
 body {
 	position: relative;
-	// max-width: 720px;
+	max-width: 720px;
 	height: 100%;
 	margin: 0 auto;
 	font-size: 16px;
