--- a/workspace/assets/style/settings/_fonts.scss
+++ b/workspace/assets/style/settings/_fonts.scss
@@ -1,38 +1,7 @@
 /*---------------
 	FONT
 ---------------*/
-@font-face {
-	font-family: 'NanumSquare';
-	font-weight: 400;
-	src: url(../fonts/NanumSquareR.eot);
-	src: url(../fonts/NanumSquareR.eot?#iefix) format('embedded-opentype'),
-		url(../fonts/NanumSquareR.woff) format('woff'),
-		url(../fonts/NanumSquareR.ttf) format('truetype');
-}
-@font-face {
-	font-family: 'NanumSquare';
-	font-weight: 700;
-	src: url(../fonts/NanumSquareB.eot);
-	src: url(../fonts/NanumSquareB.eot?#iefix) format('embedded-opentype'),
-		url(../fonts/NanumSquareB.woff) format('woff'),
-		url(../fonts/NanumSquareB.ttf) format('truetype');
-}
-@font-face {
-	font-family: 'NanumSquare';
-	font-weight: 800;
-	src: url(../fonts/NanumSquareEB.eot);
-	src: url(../fonts/NanumSquareEB.eot?#iefix) format('embedded-opentype'),
-		url(../fonts/NanumSquareEB.woff) format('woff'),
-		url(../fonts/NanumSquareEB.ttf) format('truetype');
-}
-@font-face {
-	font-family: 'NanumSquare';
-	font-weight: 300;
-	src: url(../fonts/NanumSquareL.eot);
-	src: url(../fonts/NanumSquareL.eot?#iefix) format('embedded-opentype'),
-		url(../fonts/NanumSquareL.woff) format('woff'),
-		url(../fonts/NanumSquareL.ttf) format('truetype');
-}
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 
 .fw-100 {
 	font-weight: 100;
